# f1-predictor

./: .gitignore  README.md  final_changes.diff  forecast.json  forecast_2026.py  index.html  main.py  predictions.json  pyproject.toml  requirements.txt
.gemini/plans/archive/: 2026-03-18-data-sync-patch-design.md  2026-03-18-data-sync-patch-impl-plan.md  2026-03-18-dynamic-context-refactor-design.md  2026-03-18-dynamic-context-refactor-impl-plan.md  2026-03-18-f1-pipeline-refactor-design.md  2026-03-18-f1-pipeline-refactor-impl-plan.md  2026-03-18-github-action-api-limit-fix-design.md  2026-03-18-github-action-api-limit-fix-impl-plan.md  2026-03-19-forecast-standalone-design.md  2026-03-19-forecast-standalone-impl-plan.md  2026-03-19-pipeline-refactor-design.md  2026-03-19-pipeline-refactor-impl-plan.md
.gemini/state/archive/: 2026-03-18-data-sync-patch.md  2026-03-18-dynamic-context-refactor.md  2026-03-18-f1-pipeline-refactor.md  2026-03-18-github-action-api-limit-fix.md  (+2 more)
.github/workflows/: f1-prediction.yml
config/: drivers_2026.json
data/: historical_data.csv
frontend/: index.html  package-lock.json  package.json
scripts/: evaluate_model.py  fine_tune.py
src/f1_predictor/: __init__.py  data_fetcher.py  model.py  predictor.py  preprocessor.py
src/f1_predictor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_data_fetcher.py  test_encoding_stability.py  test_feature_processor.py  test_forecast_integration.py  test_incremental_fetching.py  test_preprocessor.py
website/: index.html  predictions.json
(+10 files in other folders)
